// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action cell component renders an action correctly 1`] = `
<div
  aria-sort={null}
  className="MuiTableCell-root test-class MuiTableCell-paddingCheckbox MuiTableCell-sizeSmall MuiTableCell-body"
>
  <testAction
    key="0"
    rowData="test"
  />
</div>
`;

exports[`Action cell component renders no actions correctly 1`] = `
<div
  aria-sort={null}
  className="MuiTableCell-root test-class MuiTableCell-paddingCheckbox MuiTableCell-sizeSmall MuiTableCell-body"
/>
`;
